resources/testcases_static_checks/tests/negative/isRmfa/r14.rlsd
../../../tests_common_data/from-evaluation-section/r14.rlsd